# ESP32_Car01

./: .gitignore  CMakeLists.txt  ESP32_Car01.code-workspace  get-pip.py  platformio.ini  run_menuconfig.bat  sdkconfig  sdkconfig.defaults  sdkconfig.esp-wrover-kit-release  sdkconfig.latest_stable  sdkconfig.latest_stable.old  set_env_vars.py
Docs/: ESP32_Car01.xlsx
components/motor_control/: CMakeLists.txt  motor_control.cpp  motor_control_task.cpp
components/motor_control/include/: motor_control.h  motor_control_task.h
components/my_i2c_interface/: CMakeLists.txt  my_i2c_interface.cpp
components/my_i2c_interface/include/: my_i2c_interface.h
components/pca9685/: CMakeLists.txt  pca9685.cpp
components/pca9685/include/: pca9685.h
components/sbus_component/: CMakeLists.txt  sbus_component.cpp
components/sbus_component/include/: sbus_component.h
components/sbus_component/src/: sbus_component.cpp
include/: main.h
lib/motor_control/: motor_control.cpp  motor_control.h  motor_control_task.cpp
lib/my_i2c_interface/: my_i2c_interface.cpp  my_i2c_interface.h
lib/pca9685/: pca9685.cpp  pca9685.h
lib/sbus_component/: sbus_component.cpp  sbus_component.h
main/: CMakeLists.txt  main.cpp  task1.cpp
main/include/: class_main.h  main.h  task0.h  task1.h  tasks.h
src/: CMakeLists.txt  main.cpp  task0.cpp  task1.cpp  tasks.cpp
